packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__            let x  = (1 + 1);            x = (1 - 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x = alloca double, align 8
  store double 2.000000e+00, double* %x, align 8
  store double 0.000000e+00, double* %x, align 8
  ret void
}

